<resources>
    <string name="app_name">TikMate</string>
    <string name="ads_banner_id" translatable="false">ca-app-pub-6252372722104773/7174253251</string>
    <string name="title_download">Download</string>
    <string name="title_video">Video</string>
    <string name="title_trending">Trending</string>
    <string name="title_coin">Coin</string>
    <string name="title_how_to_use">How to use</string>
    <string name="title_demo_video">Demo video</string>
    <string name="title_share">Share</string>
    <string name="title_policy">Privacy policy</string>
    <string name="title_rate">Rate this app</string>
    <string name="downloading">Downloading</string>
    <string name="input_url">Input url here</string>
    <string name="paste_link">Paste url</string>
    <string name="url_wrong">Wrong url</string>
    <string name="url_empty">Please insert url</string>
    <string name="title_buy_coin">Buy coin</string>
    <string name="title_more_app">More app</string>
    <string name="title_feedback">Feedback</string>
    <string name="auto_download">Auto Download</string>
    <string name="auto_download_des">Switch Auto Download to download video immediately when open app</string>
    <string name="watch_video">Watch videos (Ads)</string>
    <string name="watch_video_des">Watch funny videos and earn coins</string>
    <string name="buy_coin">Buy coins</string>
    <string name="buy_coin_des">Get coins immediately</string>
    <string name="buy_vip">Buy VIP</string>
    <string name="buy_vip_des">Ads-free and download unlimited videos</string>
    <string name="earned_coin">You earned %1$s coins!!!</string>
    <string name="message_login_coin">Congratulation!!!. You have %1$s coins.\n When you don\'t have coins enough, please open app everyday to get bonus coins.</string>
    <string name="message_purchased_coin">Congratulation, you have purchased %1$s coins!!!</string>
    <string name="message_purchased_vip">Congratulation, you are  VIP now!!!</string>
    <string name="error_no_ads">There is no ads to show now, please try again</string>
    <string name="not_enough_coin">Not enough coin!!!</string>
    <string name="store">Store</string>
    <string name="restore">Restore</string>
    <string name="coin_value">× %1$s</string>
    <string name="one_week">VIP 1 week</string>
    <string name="one_month">VIP 1 month</string>
    <string name="three_month">VIP 3 months</string>
    <string name="free_trial">(Free trial %1$s days)</string>
    <string name="logout">Logout</string>
    <string name="error_download_in_progress">Your download is in progress.\nPlease upgrade to VIP account to download multiple videos at the same time</string>
    <string name="error_get_video_fail">Your link is incorrect!!!</string>
    <string name="error_save_video_fail">Something went wrong, please try again later!!!</string>
    <string name="error_video_exist">This video has been saved in your download list. Do you want to continue?</string>
    <string name="email_contact_us">linken.inc@gmail.com</string>
    <string name="contact_us">Send email via</string>
    <string name="mail_report_no_app">There is no app to send email</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Do you want delete selected videos?</string>
    <string name="yes">Yes</string>
    <string name="no_video">Your downloaded videos will appear here. Please see below instruction to download videos without any watermarks.</string>
    <string name="vip_des">Go premium</string>
    <string name="vip_des_1">Download unlimited videos without any watermarks</string>
    <string name="vip_des_2">100% Ads-free</string>
    <string name="vip_des_3">Save your time by multiple downloads</string>
    <string name="share">Share</string>
    <string name="guide_open_folder">How to open downloaded folder? See here</string>
    <string name="guide_folder">Instruction</string>
    <string name="link_folder_here">See here</string>
    <string name="folder_video">Videos</string>
    <string name="folder_download">Download</string>
    <string name="folder_internal">Find the internal storage on your Android phone -> %1$s -> TikMate.\n\n For example:</string>
    <string name="folder_samsung">- Samsung phone: Open Files Manager app -> Internal storage -> %1$s -> TikMate</string>
    <string name="folder_lg">- LG phone: Open Downloads app -> %1$s -> TikMate</string>
    <string name="folder_xiaomi">- Xiaomi phone: Open Files app-> Storage Tab -> %1$s -> TikMate</string>
</resources>
