<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="10dp"
            android:src="@drawable/img_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/bg_line_main"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/ivLogo"
            app:layout_constraintStart_toEndOf="@id/ivLogo"
            app:layout_constraintTop_toTopOf="@id/ivLogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/layoutPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/size_icon_normal"
                    android:layout_height="@dimen/size_icon_normal"
                    android:padding="4dp"
                    android:src="@drawable/ic_info"
                    android:tint="@android:color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/title_policy"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBuyCoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/size_icon_normal"
                    android:layout_height="@dimen/size_icon_normal"
                    android:padding="4dp"
                    android:src="@drawable/ic_buy_coin"
                    android:tint="@android:color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/title_buy_coin"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutHowToUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/size_icon_normal"
                    android:layout_height="@dimen/size_icon_normal"
                    android:src="@drawable/ic_use" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/title_how_to_use"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/size_icon_normal"
                    android:layout_height="@dimen/size_icon_normal"
                    android:padding="8dp"
                    android:src="@drawable/ic_share" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/title_share"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/size_icon_normal"
                    android:layout_height="@dimen/size_icon_normal"
                    android:padding="4dp"
                    android:src="@drawable/ic_feedback"
                    android:tint="@android:color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/title_feedback"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutRateApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/size_icon_normal"
                    android:layout_height="@dimen/size_icon_normal"
                    android:padding="6dp"
                    android:src="@drawable/ic_rate" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/title_rate"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutMoreApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/size_icon_normal"
                    android:layout_height="@dimen/size_icon_normal"
                    android:padding="8dp"
                    android:src="@drawable/ic_more_app" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/title_more_app"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/size_icon_normal"
                    android:layout_height="@dimen/size_icon_normal"
                    android:padding="4dp"
                    android:src="@drawable/ic_logout" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/logout"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
