<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:padding="8dp"
        android:rotation="180"
        android:src="@drawable/ic_next"
        android:tint="@android:color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap"
        tools:text="Title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRestore"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/restore"
        android:textColor="@color/colorMainBlue"
        android:textSize="18sp"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:id="@+id/layoutVipDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivBack"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_vip" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/vip_des"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_check" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/vip_des_1"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_check" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/vip_des_2"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_check" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/vip_des_3"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutVipDes" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="@dimen/size_loading"
        android:layout_height="@dimen/size_loading"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:lottie_fileName="ic_loading.json"
        app:lottie_loop="true" />
</RelativeLayout>