<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@android:color/black"
    tools:context=".ui.video.VideoFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMainBlue"
                android:textSize="18sp"
                tools:text="0" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCoin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_coin" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/layoutWatchAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size_icon_normal"
                android:layout_height="@dimen/size_icon_normal"
                android:padding="4dp"
                android:src="@drawable/ic_video"
                android:tint="@android:color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/watch_video"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/watch_video_des"
                    android:textColor="@color/colorDescription"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_line_main" />

        <LinearLayout
            android:id="@+id/layoutBuyCoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size_icon_normal"
                android:layout_height="@dimen/size_icon_normal"
                android:padding="4dp"
                android:src="@drawable/ic_coin"
                android:tint="@android:color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/buy_coin"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/buy_coin_des"
                    android:textColor="@color/colorDescription"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_line_main" />

        <LinearLayout
            android:id="@+id/layoutBuyVip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size_icon_normal"
                android:layout_height="@dimen/size_icon_normal"
                android:padding="4dp"
                android:src="@drawable/ic_buy_coin"
                android:tint="@android:color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/buy_vip"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/buy_vip_des"
                    android:textColor="@color/colorDescription"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_line_main" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>