<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.VideoFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDelete"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentEnd="true"
            android:padding="12dp"
            android:src="@drawable/ic_delete" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCheckList"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_toStartOf="@id/ivDelete"
            android:padding="12dp"
            android:src="@drawable/ic_check_list" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivDelete"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/ads_banner_id" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGuide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/adView"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/guide_open_folder"
            android:textColor="@color/grey_400"
            android:textColorHighlight="@color/colorMainBlueDark"
            android:textColorLink="@color/colorMainBlue"
            android:textSize="14sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVideos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ScrollView
        android:id="@+id/layoutNoVideo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="120dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_no_video" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/no_video"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <include layout="@layout/layout_tutorial" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>